# intelligence-per-watt

./: .env.example  .gitignore  README.md
intelligence-per-watt/: README.md  pyproject.toml
intelligence-per-watt/src/ipw/analysis/: __init__.py  accuracy.py  helpers.py  regression.py
intelligence-per-watt/src/ipw/cli/: _console.py  analyze.py  list.py  profile.py
intelligence-per-watt/src/ipw/clients/: __init__.py  base.py  mlx.py  ollama.py  openai.py  vllm.py
intelligence-per-watt/src/ipw/core/: registry.py  types.py
intelligence-per-watt/src/ipw/datasets/: __init__.py  base.py  mmlu_pro.py  supergpqa.py
intelligence-per-watt/src/ipw/datasets/ipw/: ipw.py
intelligence-per-watt/src/ipw/datasets/ipw_pro/: __init__.py  ipw_pro.py
intelligence-per-watt/src/ipw/datasets/ipw_pro/data/mixed_10k_seed42/: state.json  (+1 more)
intelligence-per-watt/src/ipw/evaluation/: __init__.py  base.py  gpqa.py  helpers.py  math500.py  mcq.py  mmlu_pro.py  natural_reasoning.py  wildchat.py
intelligence-per-watt/src/ipw/execution/: runner.py  telemetry_session.py  types.py
intelligence-per-watt/src/ipw/telemetry/: collector.py  launcher.py
intelligence-per-watt/src/ipw/tests/analysis/: test_accuracy.py
intelligence-per-watt/src/ipw/tests/cli/: test_analyze.py  test_profile.py
intelligence-per-watt/src/ipw/tests/clients/: test_base.py  test_clients_registration.py  test_ollama_client.py  test_vllm.py
intelligence-per-watt/src/ipw/tests/datasets/: test_ipw.py  test_mmlu_pro_dataset.py  test_supergpqa_dataset.py
intelligence-per-watt/src/ipw/tests/execution/: test_runner.py
(+7 files in other folders)
